force-app/main/default/objects/Invoice_Header__c/Invoice_Header__c.object-meta.xml
<CustomObject>
    <label>Invoice_Header</label>
    <nameField>
        <label>Invoice_Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice_Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>