force-app/main/default/objects/Invoice_Header__c/fields/AccountDDAuthorised__c.field-meta.xml
<CustomField>
    <fullName>AccountDDAuthorised__c</fullName>
    <formula>Account__r.Direct_Debit_authorised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountDDAuthorised</label>
    <type>Checkbox</type>
</CustomField>