force-app/main/default/objects/Invoice_Header__c/fields/AccountOutstanding__c.field-meta.xml
<CustomField>
    <fullName>AccountOutstanding__c</fullName>
    <formula>Account__r.Amount_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOutstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>