force-app/main/default/objects/Invoice_Header__c/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <formula>Account__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRecordType</label>
    <type>Text</type>
</CustomField>