force-app/main/default/objects/Invoice_Header__c/fields/AmountExclVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountExclVAT__c</fullName>
    <label>AmountExclVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>