force-app/main/default/objects/Invoice_Header__c/fields/AmountInclVAT_f__c.field-meta.xml
<CustomField>
    <fullName>AmountInclVAT_f__c</fullName>
    <formula>AmountExclVAT__c +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountInclVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>