force-app/main/default/objects/Invoice_Header__c/fields/AmountOutstanding__c.field-meta.xml
<CustomField>
    <fullName>AmountOutstanding__c</fullName>
    <label>AmountOutstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>