force-app/main/default/objects/Invoice_Header__c/fields/CollectionNotes__c.field-meta.xml
<CustomField>
    <fullName>CollectionNotes__c</fullName>
    <label>CollectionNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>