force-app/main/default/objects/Invoice_Header__c/fields/Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reason__c</fullName>
    <label>Credit Note Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditNoteReasons</valueSetName>
    </valueSet>
</CustomField>