force-app/main/default/objects/Invoice_Header__c/fields/DaysOutstanding__c.field-meta.xml
<CustomField>
    <fullName>DaysOutstanding__c</fullName>
    <formula>IF( AmountOutstanding__c &gt; 0, TODAY()- Payment_Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysOutstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>