force-app/main/default/objects/Invoice_Header__c/fields/DDAccount__c.field-meta.xml
<CustomField>
    <fullName>DDAccount__c</fullName>
    <formula>Account__r.Payment_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDAccount</label>
    <type>Text</type>
</CustomField>