force-app/main/default/objects/Invoice_Header__c/fields/DDSortCode__c.field-meta.xml
<CustomField>
    <fullName>DDSortCode__c</fullName>
    <formula>Account__r.Payment_Sort_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDSortCode</label>
    <type>Text</type>
</CustomField>