force-app/main/default/objects/Invoice_Header__c/fields/DirectDebit__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit__c</fullName>
    <formula>Account__r.Enqix_DDDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DirectDebit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>