force-app/main/default/objects/Invoice_Header__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>