force-app/main/default/objects/Invoice_Header__c/fields/DueOutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>DueOutstandingAmount__c</fullName>
    <formula>If (Payment_Due_Date__c &lt;=today(),AmountOutstanding__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DueOutstandingAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>