force-app/main/default/objects/Invoice_Header__c/fields/EffectivePeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>EffectivePeriodEnd__c</fullName>
    <formula>IF(ISBLANK(PeriodEnd__c), Invoiced_Date__c, PeriodEnd__c)</formula>
    <label>Effective Period End</label>
    <type>Date</type>
</CustomField>