force-app/main/default/objects/Invoice_Header__c/fields/EffectivePeriodStart__c.field-meta.xml
<CustomField>
    <fullName>EffectivePeriodStart__c</fullName>
    <formula>IF(ISBLANK(PeriodStart__c), DATEVALUE(CreatedDate), PeriodStart__c)</formula>
    <label>Effective Period Start</label>
    <type>Date</type>
</CustomField>