force-app/main/default/objects/Invoice_Header__c/fields/FuelSurchargeExclVAT__c.field-meta.xml
<CustomField>
    <fullName>FuelSurchargeExclVAT__c</fullName>
    <label>Fuel Surcharge Excluding VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>