force-app/main/default/objects/Invoice_Header__c/fields/Generate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Generate_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to generate a payment for an order that was paid by card and came from CP, after being delivered and its invoice was created</description>
    <inlineHelpText>Field used to generate a payment for an order that was paid by card and came from CP, after being delivered and its invoice was created</inlineHelpText>
    <label>Generate Payment</label>
    <type>Checkbox</type>
</CustomField>