force-app/main/default/objects/Invoice_Header__c/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <formula>IF(ISPICKVAL(InvoiceFrequency__c, &apos;Per Order&apos;), DATEVALUE(CreatedDate), DueDate__c)</formula>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>