force-app/main/default/objects/Invoice_Header__c/fields/InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFrequency__c</fullName>
    <label>Invoice Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvoiceFrequency</valueSetName>
    </valueSet>
</CustomField>