force-app/main/default/objects/Invoice_Header__c/fields/InvoiceNo2__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo2__c</fullName>
    <displayFormat>FMI{000000}</displayFormat>
    <label>InvoiceNo2</label>
    <type>AutoNumber</type>
</CustomField>