force-app/main/default/objects/Invoice_Header__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <externalId>true</externalId>
    <label>InvoiceNo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>