force-app/main/default/objects/Invoice_Header__c/fields/InvoicePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>InvoicePaymentMethod__c</fullName>
    <formula>text(Account__r.Enqix_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoicePaymentMethod</label>
    <type>Text</type>
</CustomField>