force-app/main/default/objects/Invoice_Header__c/fields/InvType__c.field-meta.xml
<CustomField>
    <fullName>InvType__c</fullName>
    <label>InvType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>