force-app/main/default/objects/Invoice_Header__c/fields/IsCreditNote__c.field-meta.xml
<CustomField>
    <fullName>IsCreditNote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to check for negative value invoices that must generate a bank statement and correspondent payment allocation</description>
    <inlineHelpText>Field created to check for negative value invoices that must generate a bank statement and correspondent payment allocation</inlineHelpText>
    <label>IsCreditNote</label>
    <type>Checkbox</type>
</CustomField>