force-app/main/default/objects/Invoice_Header__c/fields/IsCurrencySameAsAccount__c.field-meta.xml
<CustomField>
    <fullName>IsCurrencySameAsAccount__c</fullName>
    <formula>TEXT(CurrencyIsoCode) == TEXT(Account__r.CurrencyIsoCode)</formula>
    <label>Currency Same As Account?</label>
    <type>Checkbox</type>
</CustomField>