force-app/main/default/objects/Invoice_Header__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <formula>AND(Status__c = &apos;Invoiced&apos;,
OR(ISBLANK(Invoiced_Date__c),
IF(DAY(TODAY()) &gt; 4,
Invoiced_Date__c &lt; (TODAY() - DAY(TODAY()) + 1),
Invoiced_Date__c &lt; ADDMONTHS((TODAY() - DAY(TODAY()) + 1), -1)
)
)
)</formula>
    <label>Locked?</label>
    <type>Checkbox</type>
</CustomField>