force-app/main/default/objects/Invoice_Header__c/fields/IsOverdueDaysSynced__c.field-meta.xml
<CustomField>
    <fullName>IsOverdueDaysSynced__c</fullName>
    <formula>NOT(AND(OverdueDays__c != DaysOutstanding__c,
CASE(DaysOutstanding__c, 7, 1, 14, 1, 30, 1, 60, 1, 90, 1, 0) = 1))</formula>
    <label>Overdue Days Synced?</label>
    <type>Checkbox</type>
</CustomField>