force-app/main/default/objects/Invoice_Header__c/fields/isPartnerHeader__c.field-meta.xml
<CustomField>
    <fullName>isPartnerHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPartnerHeader</label>
    <type>Checkbox</type>
</CustomField>