force-app/main/default/objects/Invoice_Header__c/fields/IsPublished__c.field-meta.xml
<CustomField>
    <fullName>IsPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPublished</label>
    <type>Checkbox</type>
</CustomField>