force-app/main/default/objects/Invoice_Header__c/fields/IsReinvoicedElsewhere__c.field-meta.xml
<CustomField>
    <fullName>IsReinvoicedElsewhere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partially or fully reinvoiced elsewhere?</label>
    <type>Checkbox</type>
</CustomField>