force-app/main/default/objects/Invoice_Header__c/fields/Last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Last_12_months__c</fullName>
    <formula>IF(CreatedDate__c &gt; TODAY()-365, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 12 months?</label>
    <type>Text</type>
</CustomField>