force-app/main/default/objects/Invoice_Header__c/fields/LineCount__c.field-meta.xml
<CustomField>
    <fullName>LineCount__c</fullName>
    <label>Line Count</label>
    <summaryForeignKey>Invoice_Line__c.Invoice_HeaderId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>