force-app/main/default/objects/Invoice_Header__c/fields/LIveDead__c.field-meta.xml
<CustomField>
    <fullName>LIveDead__c</fullName>
    <formula>text(Account__r.Enqix_Dead_Live__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LIveDead</label>
    <type>Text</type>
</CustomField>