force-app/main/default/objects/Invoice_Header__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used when invoice is for a specific location</description>
    <inlineHelpText>Field used when invoice is for a specific location</inlineHelpText>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice_Headers (Location)</relationshipLabel>
    <relationshipName>Location_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>