force-app/main/default/objects/Invoice_Header__c/fields/of_Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Outstanding__c</fullName>
    <formula>AmountOutstanding__c / Account__r.Total_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>