force-app/main/default/objects/Invoice_Header__c/fields/OrderIds__c.field-meta.xml
<CustomField>
    <fullName>OrderIds__c</fullName>
    <label>OrderIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>