force-app/main/default/objects/Invoice_Header__c/fields/OrderLookUp__c.field-meta.xml
<CustomField>
    <fullName>OrderLookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderLookUp</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoice_Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>