force-app/main/default/objects/Invoice_Header__c/fields/Original_Invoice_Amount_exVAT__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Amount_exVAT__c</fullName>
    <formula>IF(ISBLANK(Original_Invoice_to_Credit__c),NULL, Original_Invoice_to_Credit__r.AmountExclVAT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Invoice Amount exVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>