force-app/main/default/objects/Invoice_Header__c/fields/Original_Invoice_Number_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Number_to_Credit__c</fullName>
    <formula>IF(ISBLANK(Original_Invoice_to_Credit__c),NULL,Original_Invoice_to_Credit__r.InvoiceNo__c)</formula>
    <label>Original Invoice Number to Credit</label>
    <type>Text</type>
</CustomField>