force-app/main/default/objects/Invoice_Header__c/fields/Original_Invoice_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_to_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field helps to identify the original invoice for this credit Note order.</description>
    <label>Original Invoice to Credit</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Credit Invoices</relationshipLabel>
    <relationshipName>CreditInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>