force-app/main/default/objects/Invoice_Header__c/fields/Original_Invoice_to_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_to_Credit_Date__c</fullName>
    <formula>IF(ISBLANK(Original_Invoice_to_Credit__c),NULL, Original_Invoice_to_Credit__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Invoice to Credit Date</label>
    <type>Date</type>
</CustomField>