force-app/main/default/objects/Invoice_Header__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outstanding</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice_Headers (Outstanding)</relationshipLabel>
    <relationshipName>Invoice_Headers1</relationshipName>
    <type>Lookup</type>
</CustomField>