force-app/main/default/objects/Invoice_Header__c/fields/OverdueDays__c.field-meta.xml
<CustomField>
    <fullName>OverdueDays__c</fullName>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>