force-app/main/default/objects/Invoice_Header__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <formula>Invoiced_Date__c  + VALUE(TEXT(Account__r.CreditDays__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>