force-app/main/default/objects/Invoice_Header__c/fields/Published_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Published_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published Invoice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice_Headers (Published Invoice)</relationshipLabel>
    <relationshipName>PublishedInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>