force-app/main/default/objects/Invoice_Header__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Query</label>
    <type>Checkbox</type>
</CustomField>