force-app/main/default/objects/Invoice_Header__c/fields/Ready_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Email</label>
    <type>Checkbox</type>
</CustomField>