force-app/main/default/objects/Invoice_Header__c/fields/SageExtractCreated__c.field-meta.xml
<CustomField>
    <fullName>SageExtractCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be check if the invoice had not created sages extract records</description>
    <label>Sage Extract Created</label>
    <type>Checkbox</type>
</CustomField>