force-app/main/default/objects/Invoice_Header__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>