force-app/main/default/objects/Invoice_Header__c/fields/testduedate__c.field-meta.xml
<CustomField>
    <fullName>testduedate__c</fullName>
    <formula>CreatedDate  + VALUE(TEXT(Account__r.CreditDays__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testduedate</label>
    <type>Date</type>
</CustomField>