force-app/main/default/objects/Invoice_Header__c/fields/ToPublish__c.field-meta.xml
<CustomField>
    <fullName>ToPublish__c</fullName>
    <formula>IF(AND(Salesforce__c = False, DATEVALUE(CreatedDate) &lt; DATE(2019,03,01)), True, 
IF(AND(Salesforce__c = True, DATEVALUE(CreatedDate) &gt;= DATE(2019,03,01)), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToPublish?</label>
    <type>Checkbox</type>
</CustomField>