force-app/main/default/objects/Invoice_Header__c/fields/TranType__c.field-meta.xml
<CustomField>
    <fullName>TranType__c</fullName>
    <label>TranType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>