force-app/main/default/objects/Invoice_Header__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>