force-app/main/default/objects/Invoice_Header__c/validationRules/PreventChangesWhenLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangesWhenLocked</fullName>
    <active>true</active>
    <errorConditionFormula>IsLocked__c &amp;&amp; ISCHANGED(AmountExclVAT__c)</errorConditionFormula>
    <errorMessage>The amount cannot be modified as the record is now locked.</errorMessage>
</ValidationRule>