force-app/main/default/objects/Invoice_Header__c/validationRules/RestrictChanges.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictChanges</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PRIORVALUE(BusinessCentralId__c))), NOT($Permission.AllowInvoiceChanges))</errorConditionFormula>
    <errorMessage>Update not allowed on Salesforce as this record has been sent to Business Central.</errorMessage>
</ValidationRule>