force-app/main/default/objects/Invoice_Header__c/validationRules/RestrictInvoiceFrequencyChange.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictInvoiceFrequencyChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(InvoiceFrequency__c),
NOT($Permission.ChangeFrequencyOnInvoice))</errorConditionFormula>
    <errorDisplayField>InvoiceFrequency__c</errorDisplayField>
    <errorMessage>No permission to change Invoice Frequency. Contact System Admin.</errorMessage>
</ValidationRule>