force-app/main/default/objects/Invoice_Header__c/listViews/Aged_Debtor_View.listView-meta.xml
<ListView>
    <fullName>Aged_Debtor_View</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>InvoiceNo__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>DaysOutstanding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountOutstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Aged Debtor View</label>
</ListView>