force-app/main/default/objects/Invoice_Header__c/listViews/Invoices.listView-meta.xml
<ListView>
    <fullName>Invoices</fullName>
    <columns>CreatedDate__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>AmountExclVAT__c</columns>
    <columns>AmountInclVAT_f__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceNo__c</field>
        <operation>contains</operation>
        <value>FMI990274</value>
    </filters>
    <label>All Enqix Invoices</label>
</ListView>