force-app/main/default/objects/Invoice_Header__c/listViews/Invoices_Queries.listView-meta.xml
<ListView>
    <fullName>Invoices_Queries</fullName>
    <columns>Invoiced_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>Query__c</columns>
    <columns>DaysOutstanding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Query__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoices in Query</label>
</ListView>