force-app/main/default/objects/Invoice_Header__c/listViews/Josie_BID_check.listView-meta.xml
<ListView>
    <fullName>Josie_BID_check</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountExclVAT__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <label>Josie BID check</label>
</ListView>