force-app/main/default/objects/Invoice_Header__c/listViews/Outstanding_31_60.listView-meta.xml
<ListView>
    <fullName>Outstanding_31_60</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AmountExclVAT__c</columns>
    <columns>AmountInclVAT__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>DueDate__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>DaysOutstanding__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>CollectionNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountOutstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DaysOutstanding__c</field>
        <operation>lessOrEqual</operation>
        <value>60</value>
    </filters>
    <filters>
        <field>DaysOutstanding__c</field>
        <operation>greaterThan</operation>
        <value>30</value>
    </filters>
    <label>Outstanding 31-60 Days</label>
</ListView>