force-app/main/default/objects/Invoice_Header__c/listViews/Outstanding_90_Days.listView-meta.xml
<ListView>
    <fullName>Outstanding_90_Days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AmountExclVAT__c</columns>
    <columns>AmountInclVAT__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>DueDate__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>DaysOutstanding__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>CollectionNotes__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Query__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountOutstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DaysOutstanding__c</field>
        <operation>greaterThan</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>a212X000001FaNL</value>
    </filters>
    <label>Outstanding 90+ Days</label>
</ListView>