force-app/main/default/objects/Invoice_Header__c/listViews/Outstanding_ALl.listView-meta.xml
<ListView>
    <fullName>Outstanding_ALl</fullName>
    <columns>DueOutstandingAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CreatedDate__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AmountExclVAT__c</columns>
    <columns>AmountInclVAT_f__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>DueDate__c</columns>
    <columns>AmountOutstanding__c</columns>
    <columns>DaysOutstanding__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>CollectionNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountInclVAT_f__c</field>
        <operation>equals</operation>
        <value>GBP -2832.87</value>
    </filters>
    <label>Outstanding - All</label>
</ListView>