force-app/main/default/objects/Invoice_Header__c/listViews/Salesforce_Invoices.listView-meta.xml
<ListView>
    <fullName>Salesforce_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Location__c</columns>
    <columns>AmountExclVAT__c</columns>
    <columns>AmountInclVAT__c</columns>
    <columns>Salesforce__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Query__c</columns>
    <columns>OrderLookUp__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountInclVAT_f__c</field>
        <operation>equals</operation>
        <value>225.9</value>
    </filters>
    <label>Salesforce Invoices</label>
</ListView>